<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="app_settings">Settings</string>
    <string name="about_title">About ALC</string>
    <string name="title_activity_main">ALC 4 Phase 1</string>
    <string name="title_activity_profile">My Profile</string>
    <string name="button1">About ALC</string>
    <string name="button2">My Profile</string>
    <string name="TextViewTitle">Welcome to ALC 4.0</string>

    <string name="mehlule_sibenke">Mehlule Sibenke</string>
    <string name="todo">TODO</string>
    <string name="track_android">Track: Android</string>
    <string name="country_zimbabwe">Country: Zimbabwe</string>
    <string name="email_mmsnn1_gmail_com">Email: mmsnn1@gmail.com</string>
    <string name="phone_number_263772264728">Phone Number: 263772264728</string>
    <string name="slack_username_mmsnn1">Slack Username: @mmsnn1 </string>
    <string name="title_activity_about">About ALC</string>
</resources>
