<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ProfileActivity"
    tools:showIn="@layout/activity_profile">

    <TextView
        android:id="@+id/name"
        android:layout_width="395dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/mehlule_sibenke"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <View
        android:id="@+id/divider"
        android:layout_width="395dp"
        android:layout_height="2dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="216dp"
        android:layout_height="197dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="120dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.017"
        app:srcCompat="@drawable/met" />

    <TextView
        android:id="@+id/textTrack"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/track_android"
        android:textSize="18sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/textCountry"
        android:layout_width="0dp"
        android:layout_height="52dp"

        android:layout_marginTop="8dp"
        android:text="@string/country_zimbabwe"
        android:textSize="18sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="@+id/textTrack"
        app:layout_constraintStart_toStartOf="@+id/textTrack"
        app:layout_constraintTop_toBottomOf="@+id/textTrack" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="0dp"
        android:layout_height="52dp"

        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/email_mmsnn1_gmail_com"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textCountry"
        app:layout_constraintStart_toStartOf="@+id/textCountry"
        app:layout_constraintTop_toBottomOf="@+id/textCountry" />

    <TextView
        android:id="@+id/textPhone"
        android:layout_width="0dp"
        android:layout_height="56dp"

        android:layout_marginTop="8dp"
        android:text="@string/phone_number_263772264728"
        android:textSize="18sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="@+id/textEmail"
        app:layout_constraintStart_toStartOf="@+id/textEmail"
        app:layout_constraintTop_toBottomOf="@+id/textEmail" />

    <TextView
        android:id="@+id/textUser"
        android:layout_width="0dp"
        android:layout_height="52dp"

        android:layout_marginTop="8dp"
        android:text="@string/slack_username_mmsnn1"
        android:textSize="18sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="@+id/textPhone"
        app:layout_constraintStart_toStartOf="@+id/textPhone"
        app:layout_constraintTop_toBottomOf="@+id/textPhone" />
</android.support.constraint.ConstraintLayout>