<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/go_to_activityB"
        style="@android:style/Widget.Holo.Light.Button"
        android:layout_width="239dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="@android:color/holo_orange_light"
        android:ellipsize="marquee"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/button1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btn_go_to_activityC"
        style="@android:style/Widget.Button"
        android:layout_width="239dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/holo_orange_light"
        android:ellipsize="start"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/button2"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/go_to_activityB"
        app:layout_constraintStart_toStartOf="@+id/go_to_activityB"
        app:layout_constraintTop_toBottomOf="@+id/go_to_activityB" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/almendra"
        android:text="@string/TextViewTitle"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065" />

</android.support.constraint.ConstraintLayout>